--- a/ProjectoEsw/Views/Candidato/CandidaturaSucesso.cshtml
+++ b/ProjectoEsw/Views/Candidato/CandidaturaSucesso.cshtml
@@ -21,8 +21,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong></strong></p>
+    <h2 class=" text-center"><strong>Candidatura efectuada com sucesso</strong></h2>
+    <p><strong>A sua Candidatura foi efectuada com sucesso e foi submetida para analise. Será notificado quando a sua candidatura for analisada</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
