--- a/ProjectoEsw/Views/Erros/ErroMarcarReuniao.cshtml
+++ b/ProjectoEsw/Views/Erros/ErroMarcarReuniao.cshtml
@@ -21,8 +21,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong></strong></p>
+    <h2 class=" text-center"><strong>Erro na Marcação de Reunião</strong></h2>
+    <p><strong>A reunião que tentou marcar falhou verifique se inseriu algo mal, por favor volte a tentar</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
