--- a/ProjectoEsw/Views/Erros/ErroRole.cshtml
+++ b/ProjectoEsw/Views/Erros/ErroRole.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "ErroLogin";
+    ViewData["Title"] = "ErroRole";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ErroLogin</h2>
+<h2>ErroRole</h2>
 
