--- a/ProjectoEsw/Views/Candidato/MarcarReuniaoSucesso.cshtml
+++ b/ProjectoEsw/Views/Candidato/MarcarReuniaoSucesso.cshtml
@@ -21,8 +21,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong></strong></p>
+    <h2 class=" text-center"><strong>Reuniao marcada com sucesso</strong></h2>
+    <p><strong>A sua Reuniao foi marcada com sucesso, para mais informações consulte o calendario</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
