--- a/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
@@ -19,13 +19,22 @@
     <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
 }
 <!--Candidato-->
-<div class="jumbotron col-sm-5">
-    <h3>Erasmus+</h3>
-    <p> Resto Informacao + links + prazos</p>
-    <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaErasmus" class="btn btn-default center-block">Candidatar-me</a>
-</div>
-<div class="jumbotron col-sm-5 col-sm-offset-1">
-    <h3>Programa Santander</h3>
-    <p> Resto Informacao + links + prazos</p>
-    <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaSantander" class="btn btn-default center-block">Candidatar-me</a>
+<div class="col-sm-8 jumbotron ">
+    <div class="col-sm-6">
+        <h3>Erasmus+</h3>
+        <p> Resto Informacao + links + prazos</p>
+        <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaErasmus" class="btn btn-default center-block">Candidatar-me</a>
+    </div>
+    <div class="col-sm-6">
+        <h3>Programa Santander</h3>
+        <p> Resto Informacao + links + prazos</p>
+        <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaSantander" class="btn btn-default center-block">Candidatar-me</a>
+    </div>
+  </div>
+
+<div class="jumbotron col-sm-3 col- col-sm-offset-1">
+    <h5 class="text-center">Opcoes</h5>
+    <a asp-area="" asp-controller="Candidato" asp-action="VisualizarCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Ver Candidatura</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
 </div>
