--- a/ProjectoEsw/Views/Erros/ErroAlterarPassword.cshtml
+++ b/ProjectoEsw/Views/Erros/ErroAlterarPassword.cshtml
@@ -21,8 +21,8 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center"><strong>Erro na Candidatura</strong></h2>
-    <p><strong></strong></p>
+    <h2 class=" text-center"><strong>Erro a alterar password</strong></h2>
+    <p><strong>Erro a alterar a password, volte a tentar.</strong></p>
     <a asp-area="" asp-controller="Candidato" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
