--- a/ProjectoEsw/Views/Candidato/VisualizarCandidatura.cshtml
+++ b/ProjectoEsw/Views/Candidato/VisualizarCandidatura.cshtml
@@ -20,7 +20,7 @@
 @if (@Model == null)
 {
     <div class="jumbotron col-sm-7 col-sm-offset-1">
-        <h3 class="center-block">Sem Candidatura</h3>
+        <h3 class="center-block text-center">Sem Candidatura efetuada</h3>
     </div>
     <div class="jumbotron col-sm-3 col-sm-offset-1">
         <h5 class="text-center">Opcoes</h5>
