--- a/ProjectoEsw/Views/Tecnico/MarcarEntrevistaSucesso.cshtml
+++ b/ProjectoEsw/Views/Tecnico/MarcarEntrevistaSucesso.cshtml
@@ -1,9 +1,6 @@
-﻿@model ProjectoEsw.Models.Identity.Perfil;
-
+﻿
 @section links {
-    <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
-    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(Model => Model.Email) </a>
-
+    <a asp-area="" asp-controller="Tecnico" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
 }
 @section Home{
     <a asp-area="" asp-controller="Tecnico" asp-action="Index">Home</a>
@@ -20,15 +17,13 @@
 }
 <!--Home-->
 <div class="jumbotron col-sm-8">
-    <h1>Sobre Nos/h1>
-    <p> Resto Informacao + links</p>
+    <h2 class=" text-center"><strong>Entrevista marcada com sucesso</strong></h2>
+    <p><strong>A sua entrevista foi marcada com sucesso, para mais informações consulte o calendario</strong></p>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Index" class="btn btn-link btn-xs text-center center-block">Voltar Pagina Inicial</a>
 </div>
 
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
-    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
-    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
-
     <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidaturas" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
     <a asp-area="" asp-controller="Tecnico" asp-action="MarcarEntrevista" class="btn btn-link btn-xs pull-right col-sm-12">Marcar Entrevistas</a>
 </div>
